# philips-hue-v2

./: .gitignore  Makefile  README.md  __main__.py  pyproject.toml  ruff.toml
philips_hue_v2/: __init__.py  authentication.py  bridge.py
philips_hue_v2/lights/: color.py  controller.py  lights.py
philips_hue_v2/resource/: get_resources.py  lights.py  network.py  requests.py
