[tool.poetry]
name = "philips-hue-v2"
version = "0.1.0"
description = "Python bindings for the Philips Hue V2 API"
authors = ["Robert Nyström <robert.nystrom@toolsense.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
result = "^0.13.1"
loguru = "^0.7.2"
httpx = { extras = ["http2"], version = "^0.25.0" }
python-dotenv = "^1.0.0"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
